<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_activity_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackground"
            android:paddingBottom="16dp"
            tools:context=".app.view.MainActivity">

            <ImageView
                android:id="@+id/main_activity_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <androidx.cardview.widget.CardView
                android:id="@+id/main_activity_card_presenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_search_button">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_activity_card_presenter_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp">

                    <ImageView
                        android:id="@+id/main_activity_card_logo"
                        android:layout_width="45dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_mastercard_logo" />

                    <TextView
                        android:id="@+id/main_activity_card_serial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/bank_account_color"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@+id/main_activity_card_logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/main_activity_card_logo"
                        app:layout_constraintTop_toTopOf="@+id/main_activity_card_logo" />

                    <ImageView
                        android:id="@+id/main_activity_user_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/main_activity_card_logo"
                        app:layout_constraintTop_toBottomOf="@+id/main_activity_card_logo"
                        app:srcCompat="@drawable/ic_account" />

                    <TextView
                        android:id="@+id/main_activity_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="@+id/main_activity_user_icon"
                        app:layout_constraintStart_toEndOf="@+id/main_activity_user_icon"
                        app:layout_constraintTop_toTopOf="@+id/main_activity_user_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/main_activity_user_name"
                        app:layout_constraintEnd_toEndOf="@+id/main_activity_card_serial"
                        app:layout_constraintTop_toTopOf="@+id/main_activity_user_name">

                        <TextView
                            android:id="@+id/main_activity_valid_thru_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/valid_thru"
                            android:textAlignment="center"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/main_activity_valid_thru_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="TextView"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/main_activity_current_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:text="TextView"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/main_activity_user_icon"
                        app:layout_constraintTop_toBottomOf="@+id/main_activity_user_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/main_activity_current_balance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/main_activity_current_balance">

                        <TextView
                            android:id="@+id/main_activity_current_balance_dollar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_activity_current_balance_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="8dp"
                            android:text="@string/your_balance"
                            android:textAlignment="viewEnd" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/main_activity_currency_changer_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/change_currency"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/main_activity_currency_changer_layout"
                app:layout_constraintStart_toStartOf="@+id/main_activity_currency_changer_layout"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_card_presenter" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/main_activity_currency_changer_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:columnCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_currency_changer_title"
                app:useDefaultMargins="false">

                <androidx.cardview.widget.CardView
                    android:id="@+id/currency_gbp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/currency_selector_background"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_column="0"
                    app:layout_row="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/currency_gbp_icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            app:srcCompat="@drawable/ic_gbp" />

                        <TextView
                            android:id="@+id/currency_gbp_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/currency_gbp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/currency_eur"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/currency_selector_background"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_column="1"
                    app:layout_row="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/currency_eur_icon"
                            android:layout_width="22dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_eur" />

                        <TextView
                            android:id="@+id/currency_eur_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/currency_usd"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/currency_rub"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/currency_selector_background"
                    app:cardCornerRadius="16dp"
                    app:layout_column="2"
                    app:layout_row="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/currency_rub_icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            app:srcCompat="@drawable/ic_rub" />

                        <TextView
                            android:id="@+id/currency_rub_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/currency_rub"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_activity_history_presenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="@+id/main_activity_card_presenter"
                app:layout_constraintStart_toStartOf="@+id/main_activity_card_presenter"
                app:layout_constraintTop_toBottomOf="@+id/main_activity_currency_changer_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/main_activity_history_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/history"
                        android:textColor="@color/primaryBackground"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_activity_history_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/main_activity_ufo_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:columnCount="2"
                app:layout_constraintBottom_toTopOf="@+id/main_activity_card_presenter"
                app:layout_constraintStart_toStartOf="@+id/main_activity_card_presenter"
                app:rowCount="2">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_column="0"
                    app:layout_row="0"
                    app:srcCompat="@drawable/ic_dot" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_column="1"
                    app:layout_row="0"
                    app:srcCompat="@drawable/ic_dot" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_column="0"
                    app:layout_row="1"
                    app:srcCompat="@drawable/ic_dot" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_column="1"
                    app:layout_row="1"
                    app:srcCompat="@drawable/ic_dot" />
            </androidx.gridlayout.widget.GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>